[package]
name = "cloud-discovery-kubernetes"
version = "0.1.0"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eipi1/cloud-discovery-kubernetes"
description = """
Kubernetes implementation of rust-cloud-discovery
"""
categories = ["network-programming"]
keywords = ["cloud", "discovery", "kubernetes", "k8s"]

[dependencies.async-trait]
version = "0.1"

[dependencies.http]
version = "0.2"

[dependencies.rust-cloud-discovery]
version = "0.1"

[dependencies.kube]
version = "0.51"

[dependencies.k8s-openapi]
version = "0.11"
features = ["v1_18"]

[dependencies.log]
version = "0.4"

[dev-dependencies.tokio]
version = "1.5"
features = ["rt", "macros", "rt-multi-thread"]